# CutlassProgramming

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  environment.yml  requirements.txt
.devcontainer/zsh-plugins/: .p10k.zsh  devcontainer-feature.json  install.sh  ohmyzsh.sh
csrc/: 01_layouts.cu  01a_layout_size.cu  01b_layout_dice.cu  01c_layout_stride.cu  01d_layout_functions.cu  01e_swizzle_layout.cu  01f_layout_functions.cu  02_composition.cu  03_product.cu  04_divide.cu  05_tensor_access.cu  05a_tensor_indexing.cu  06_tensor_slice.cu  06a_tensor_local_tile.cu  06b_tensor_local_partition.cu  06c_partiontion_understanding.cu  07_tensor_copy.cu  07a_tensor_copy_aten.cu  08_tensor_predicate.cu  09_fma_asm.cu  09_fma_asm_aten.cu  09a_fma_asm_aten.cu  10_tensor_block_grid_aten.cu  11_pointer.cu  12_tuple_replace.cu  13_tensor_partition_smem1d.cu  15_understaing_copy.cu  15a_understaing_copy_aten.cu  16_understanding_mma.cu  16a2_understaing_mma_aten.cu  16a3_understanding_mma_aten.cu  16a4_understanding_mma_aten.cu  16a_understanding_mma_aten.cu  intTuple.cu  layouts.cu
include/: latex.hpp
layouts/: S128V16.tex  S128_V32_T128_V4.tex  S128_V32_T128_V4x1.tex  copy_atom.tex  raked_product.tex  tiled_copy.tex
profiling/configs/: copy.ncu-cfg
profiling/profiles/: 15a_understaing_copy_aten.ncu-rep  16a2_understaing_mma_aten.ncu-rep  16a3_understanding_mma_aten.ncu-rep  16a4_understanding_mma_aten.ncu-rep  16a_understanding_mma_aten.ncu-rep
profiling/sections/: ComputeWorkloadAnalysis.section  DeviceMemoryTable.section  FrameBufferPartition.section  InstructionStatistics.section  LaunchStatistics.section  LoadMetric.section  MemoryCheck.section  MemoryWorkloadAnalysis.section  MemoryWorkloadAnalysis_Chart.section  MemoryWorkloadAnalysis_Tables.section  NumaAffinity.section  Nvlink.section  Nvlink_Tables.section  Nvlink_Topology.section  Occupancy.section  Pipeline.section  SchedulerStatistics.section  SharedMemAnalysis.section  SourceCounters.section  SpeedOfLight.section  SpeedOfLight_RooflineChart.section  (+6 more)
